--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>基岩版插件及纯生存服务器网站 </h1>
-<h2>服务器信息：</h2>
+<h2>服务器信息1：</h2>
 <h3>简介：</h3>
 <p>基岩和Java版无名氏服务器，QQ群：746990101.</p>
 <h3>IP地址及端口：</h3>
