--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h3>简介：</h3>
 <p>基岩和Java版无名氏服务器，QQ群：746990101.</p>
 <h3>IP地址及端口：</h3>
-<p>基岩版插件服：</p>
+<h4>基岩版插件服：</h4>
 <p>IP：xyz.simpfun.cn</p>
 <p>端口：55538</p>
 
