--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <h4>基岩版插件服：</h4>
 <p>IP：xyz.simpfun.cn</p>
 <p>端口：55538</p>
+<p>版本：1.20.1x</p>
+<h4>基岩版纯生存服：</h4>
+<p>IP：play.simpfun.vip</p>
+<p>端口：33198</p>
+<p>版本：1.20.1x</p>
+<h4>Java服：</h4>
+<p>IP:play.simpfun.vip:20116</p>
+<p>版本：1.18.2</p>
 
 </body>
 </html>
