--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 <p>版本：1.18.2</p>
 <h3>QQ群(仅此一个)：</h3>
 <p>746990101</p>
+<h2>其他：</h2>
+<h3>Minebbs:</h3>
+<p>https://www.minebbs.com/threads/java.19175/</p>
 
 </body>
 </html>
