--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p>746990101</p>
 <h2>其他：</h2>
 <h3>Minebbs:</h3>
-<p>https://www.minebbs.com/threads/java.19175/</p>
+<a href="https://www.minebbs.com/threads/java.19175/">https://www.minebbs.com/threads/java.19175/</a>
 
 </body>
 </html>
