--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <h3>IP地址及端口：</h3>
 <h4>基岩版插件服：</h4>
 <p>IP：xyz.simpfun.cn</p>
-<p>端口：请进QQ群获取</p>
+<p>端口：55538</p>
 <p>版本：1.20.1x</p>
 <h4>基岩版纯生存服：</h4>
 <p>IP：play.simpfun.vip</p>
-<p>端口：请进QQ群获取</p>
+<p>端口：33198</p>
 <p>版本：1.20.1x</p>
 <h4>Java服：</h4>
 <p>IP:play.simpfun.vip:20116</p>
-<p>版本：请进QQ群获取</p>
+<p>版本：Java1.18.2</p>
 <h3>QQ群(仅此一个)：</h3>
 <p>746990101</p>
 <h2>其他：</h2>
