--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1>基岩版插件及纯生存服务器网站 </h1>
 <h2>服务器信息：</h2>
 <h3>简介：</h3>
-<p>基岩和Java版无名氏服务器，QQ群：746990101.</p>
+<p>基岩版插件和纯生存无名氏服务器，QQ群：746990101.</p>
 <h3>IP地址及端口：</h3>
 <h4>基岩版插件服：</h4>
 <p>IP：xyz.simpfun.cn</p>
