--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p>746990101</p>
 <h2>其他：</h2>
 <h3>Minebbs:</h3>
-<a href="https://www.minebbs.com/threads/20370/">https://www.minebbs.com/threads/java.19175/</a>
+<a href="https://www.minebbs.com/threads/20370/">https://www.minebbs.com/threads/20370/</a>
 
 </body>
 </html>
