--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <p>端口：55538</p>
 <p>版本：1.20.1x</p>
 <h4>基岩版纯生存服：</h4>
-<p>IP：play.simpfun.vip</p>
-<p>端口：33198</p>
+<p>IP：play.simpfun.cn</p>
+<p>端口：17205</p>
 <p>版本：1.20.1x</p>
 <h3>QQ群(仅此一个)：</h3>
 <p>746990101</p>
