--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <h2>其他：</h2>
 <h3>Minebbs:</h3>
 <a href="https://www.minebbs.com/threads/20370/">https://www.minebbs.com/threads/20370/</a>
+<h3>Klpbbs(苦力怕论坛):</h3>
+<a href="https://klpbbs.com/thread-110511-1-1.html">https://klpbbs.com/thread-110511-1-1.html</a>
 
 </body>
 </html>
