--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <p>基岩版插件和纯生存无名氏服务器，QQ群：746990101.</p>
 <h3>IP地址及端口：</h3>
 <h4>基岩版插件服：</h4>
-<p>IP：g1.getmc.cn</p>
-<p>端口：55222</p>
+<p>IP：wms.9666.fun</p>
+<p>端口：20251</p>
 <p>版本：1.20.3x/1.20.4x</p>
 <h4>基岩版纯生存服：</h4>
 <p>IP：play.simpfun.cn</p>
