--- a/index.html
+++ b/index.html
@@ -7,14 +7,10 @@
 <h3>简介：</h3>
 <p>基岩版插件和纯生存无名氏服务器，QQ群：746990101.</p>
 <h3>IP地址及端口：</h3>
-<h4>基岩版插件服：</h4>
-<p>IP：112.124.50.248</p>
-<p>端口：19132</p>
+<h4>大厅：</h4>
+<p>IP：wms.9666.fun</p>
+<p>端口：24973</p>
 <p>版本：1.20.3x/1.20.4x/1.20.5x</p>
-<h4>基岩版纯生存服：</h4>
-<p>IP：play.simpfun.cn</p>
-<p>端口：17205</p>
-<p>版本：1.20.4x</p>
 <h3>QQ群(仅此一个)：</h3>
 <p>746990101</p>
 <h2>其他：</h2>
