--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 <h3>简介：</h3>
 <p>基岩版插件和纯生存无名氏服务器，QQ群：746990101.</p>
 <h3>IP地址及端口：</h3>
-<h4>大厅：</h4>
-<p>IP：112.124.50.248</p>
-<p>端口：19132</p>
-<p>版本：1.20.3x/1.20.4x/1.20.5x</p>
+<p>见QQ群746990101</p>
 <h3>QQ群(仅此一个)：</h3>
 <p>746990101</p>
 <h2>其他：</h2>
