--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <body>
 
-<h1>基岩版插件及纯生存服务器网站 </h1>
+<h1>互通生存服务器网站 </h1>
 <h2>服务器信息：</h2>
 <h3>简介：</h3>
-<p>基岩版插件和纯生存无名氏服务器，QQ群：746990101.</p>
+<p>基互通生存无名氏服务器，QQ群：746990101.</p>
 <h3>IP地址及端口：</h3>
 <p>见QQ群746990101</p>
 <h3>QQ群(仅此一个)：</h3>
