--- a/serverrules.html
+++ b/serverrules.html
@@ -1,1 +1,20 @@
-123
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>基岩版插件生存服务器网站 </h1>
+<h2>服务器规则：</h2>
+<p>1.本服务器禁止使用包括toolbox，矿透，自动连点器等的作弊工具，违者查封！</p>
+<p>（通过任何不正当手段获取的利益与优势在本服务器都是不被允许的！）</p>
+<p>2.禁止欺负新人，违者警告。</p>
+<p>3.禁止包括但不限于偷家、拆家、炸毁别人建筑等违规操作，违者警告或查封。</p>
+<p>4.进群请把群昵称改为游戏名，方便取得联系。</p>
+<p>5.禁止卡服、炸服、崩服等一切导致服务器不能正常运行的行为。</p>
+<p>6.禁止在服务器内把公共地点圈为自己的领地，违者删除领地并警告。</p>
+<p>7.QQ群内禁止刷屏、挖人、宣传服务器、传播广告、非法信息等行为，违者禁言，产生严重后果踢群。</p>
+<p>8.禁止无理由欺负其他玩家，PVP需经过双方同意。</p>
+<p>9.禁止乱圈领地，违者删除。</p>
+<p>10.尽量进QQ群，愿大家努力举报，为服务器玩家创造一个美好的游玩环境。</p>
+
+</body>
+</html>
