--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h3>Klpbbs(苦力怕论坛):</h3>
 <a href="https://klpbbs.com/thread-110511-1-1.html">https://klpbbs.com/thread-110511-1-1.html</a>
 
-<a href="https://echen8332.github.io/serverrules">--->点我跳转至服务器规则页面<---</a>
+\n\n<a href="https://echen8332.github.io/serverrules">--->点我跳转至服务器规则页面<---</a>
 
 </body>
 </html>
