--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <p>746990101</p>
 <h2>其他：</h2>
 <h3>Klpbbs(苦力怕论坛):</h3>
-<a href="https://klpbbs.com/thread-110511-1-1.html">https://klpbbs.com/thread-110511-1-1.html</a>
+<a href="https://klpbbs.com/thread-152775-1-1.html">https://klpbbs.com/thread-152775-1-1.html</a>
+<h3>minebbs:</h3>
+<a href="https://www.minebbs.com/threads/32621/">https://www.minebbs.com/threads/32621/</a>
 
 </body>
 </html>
