--- a/serverrules.html
+++ b/serverrules.html
@@ -3,7 +3,7 @@
 <body>
 
 <p><a href="https://echen8332.github.io/">--->点我跳转回主页<---</a></p>
-<h1>基岩版插件生存服务器网站 </h1>
+<h1>无名氏服务器网站 </h1>
 <h2>服务器规则：</h2>
 <p>1.本服务器禁止使用包括toolbox，矿透，自动连点器等的作弊工具，违者查封！</p>
 <p>（通过任何不正当手段获取的利益与优势在本服务器都是不被允许的！）</p>
