--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <body>
 
 <p><a href="https://echen8332.github.io/serverrules">--->点我跳转至服务器规则页面<---</a></p>
-<h1>基岩版插件生存服务器网站 </h1>
+<h1>无名氏服务器网站 </h1>
 <h2>服务器信息：</h2>
 <h3>简介：</h3>
-<p>基岩版插件生存服务器，QQ群：746990101.</p>
+<p>基岩版插件模组生存服务器，QQ群：746990101.</p>
 <h3>IP地址及端口：</h3>
 <p>见QQ群746990101</p>
 <h3>QQ群(仅此一个)：</h3>
